--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .DS_Store
 .env
 .env.backup
-.env.production
 .phpactor.json
 .phpunit.result.cache
 /.fleet
@@ -22,3 +21,8 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# zip files
+*.zip
+# tar files
+*.tar
